--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "description": "",
     "dependencies": {
+        "chalk": "^4.0.0",
         "child_process": "^1.0.2",
         "fs": "0.0.1-security",
         "inquirer": "^7.1.0"
